fix: add line under Dialog title and adjust spacing

--- a/src/components/Dialog.less
+++ b/src/components/Dialog.less
@@ -102,12 +102,12 @@
 		@font-16-600();
 		@ellipsis();
 		border-radius: 3px 3px 0 0;
-		padding: @sp-16 @sp-16 0;
-		margin-bottom: @sp-08;
+		padding: @sp-16;
+		border-bottom: 1px solid var(--border-subtle);
 	}
 
 	&__body {
-		padding: @sp-08 @sp-16 0;
+		padding: @sp-16 @sp-16 0;
 		margin-bottom: @sp-48;
 		flex: 1;
 		overflow: hidden;
